--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<html>
+<head>
+<title>
+Alfred's Prep for 9.19    
+</title>  
+    <link href="hhh.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+    <h2> A Good Visualization </h2>
+<p>
+I actually found two really cool in general. Those two are definitely the ones you would be amazed when you see them. However, one is significnatly better than the other. Why? 
+</p>
+<p> Here are the two websites:
+<br>
+<br>
+<a href="https://projects.christianlaesser.com/travel-visa-inequality/">Travel Visa Inequality</a>
+<br>
+<a href="https://visme.co/blog/best-data-visualizations/">Hello, Sun</a>
+<br>
+</p>
 
+    <h3>Which one is better?</h3>
+<div1>
+<p1>
+Before sharing my thoughts , let's see what are the five qualities that a good visualization should have.
+</p1>
+<ul>
+    <li>It is Truthful </li>
+    <li>It is Functional </li>
+    <li>It is Beautiful </li>
+    <li>It is Insightful </li>
+    <li>It is Enlighting </li>
+</ul>
+    </div1>
+<div>
+<p1>
+To be honest, my first impression was that "Hello, Sun" is amazing. In contrast, the "Travel Visa Inequality" is less attracting, even though they are both beautiful in terms of the whole design, its layout, etc.. And you can clearly see the point of the data as the designers make the difference of data really clear. So they for sure fulfill the "Beautiful" requirment. And they are both truthful and functional. They are both truthful as they get their data from authorized organizations and functional as they can serve as tools for people. You can use the "Hello, Sun" to keep track of time in different time zone. You can even set a different speed to see the realtionship between the sun and the earth. "Travel" is functional because poeple can easily use it to see whether their passports can used in other countries.
+<br>
+But I think "Travel" is a better one for following two reasons.
+    </p1>
+<ol>
+<li> It is more insightful: when you are holding a U.S. passport, which is almost a "free pass" to many places all over the world, have you ever thought about those people in other countries, especailly people in a poorer or more dangerouse country? The answer is likely to be a no. Thus, the whole website might give you a shock especially in the way it presents those data.  As for "Hello", it is cool, but in my opinion, it does not go beyond "wow". </li>
+<li> It is more enlighting: the outlook is really impressive as I believe it does show many knowledge that many people might not have before broswing it. Those data can lead to many questions. For instance, why do some of the countries need their citizen to apply passoport if going to another countries? There will be many interesing stories behind. It might cover the topic of international relations, economics, sociology... However, when you look at the "Hello", what you wonder most might be how you can design the cool thing. The enlighting level is significantly different. </li>
+</ol>
+</div>
+<p>
+    <i>How to make "Hello" better:</i> <br>
+Like what I mentioned above. It is a good design, but not enough. I think one of the elements should be added is a globe, because people can figure out the positions of those cities more easily, which would help people to reflect what exactly results in the time difference. And seeing it in a global level is more exciting. That would definitely raise more interstes from people. In addition, a globe is cooler as it is not just showing some big cities. People want to find their roots or the place they want to visit.</p>
+</body>
+</html>
